--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
             <div class="flowser-video">
                 <video autoplay loop muted playsinline>
-                    <source src="promo.mp4" type="video/mp4">
+                    <source src="./promo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
