--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div class="award-card">
                 <img src="flow.png" alt="Flow" class="award-image">
                 <h3>High-severity security vulnerability reward</h3>
-                <p>We also reported a high-severity DoS vulnerability in flow-go, earning a $1K reward and reinforcing our commitment to security and reliability in the Flow ecosystem.</p>
+                <p>We reported a high-severity DoS vulnerability in a blockchain's core node, reinforcing our commitment to security and responsible disclosure.</p>
                 <a href="https://github.com/onflow/flow-go" target="_blank" class="award-btn">VIEW</a>
             </div>
         </div>
