Update 'Projects and awards' carousel card text
- Added line break in title after 'Projects and awards'
- Shortened body text to be more concise and direct

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <img src="bg.jpg" alt="Background" class="card-bg">
                     <img src="our-projects.png" alt="Our Projects" class="card-image">
                     <div class="card-glass">
-                        <h3>Projects and awards we are proud of</h3>
-                        <p>A collection of the projects and wins we're genuinely proud of — from tools we crafted to challenges we conquered. Slide left or right to dive into each one and see what we've been up to.</p>
+                        <h3>Projects and awards<br>we are proud of</h3>
+                        <p>Our proudest projects and wins — from tools we built to challenges we solved. Slide left or right to explore.</p>
                     </div>
                 </div>
                 
