Update Bart's GitHub link to profile page
- Changed from Flowser commits page to main GitHub profile
- Link now points to https://github.com/bartolomej

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                             <span class="skill-badge">Backend</span>
                         </div>
                         <p>Blockchain engineer with experience in smart contract development, open-source tooling, and ecosystem integrations. Responsible for backend architecture and emulator integration in Flowser.</p>
-                        <a href="https://github.com/onflowser/flowser/commits?author=bartolomej" target="_blank" rel="noopener noreferrer" class="team-link">GitHub</a>
+                        <a href="https://github.com/bartolomej" target="_blank" rel="noopener noreferrer" class="team-link">GitHub</a>
                     </div>
                 </div>
                 
