Change 'What we create' subtitle to bold paragraph
- Changed h3 to bold paragraph with 'subtitle' class in What we create section
- Added CSS styling for .subtitle to match h3 appearance but as body text

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="what-we-do-container">
             <div class="section-badge">OUR FOCUS</div>
             <h2>We build the tools, protocols, and infrastructure that Web3 teams rely on.</h2>
-            <h3>From developer productivity to ecosystem security, we help projects ship faster and safer.</h3>
+            <p class="subtitle"><strong>From developer productivity to ecosystem security, we help projects ship faster and safer.</strong></p>
             
             <div class="what-we-do-grid">
                 <div class="what-we-do-card" data-color="purple" data-number="01">
