Change Flowser subtitle to bold paragraph
- Changed h3 to bold paragraph with 'subtitle' class in Flowser section
- Added CSS styling matching 'What we create' subtitle style

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="flowser-container">
             <div class="flowser-content">
                 <h2>Flowser</h2>
-                <h3>A developer tool designed for building, testing, and exploring the Flow blockchain — all in one place.</h3>
+                <p class="subtitle"><strong>A developer tool designed for building, testing, and exploring the Flow blockchain — all in one place.</strong></p>
                 <p>Flowser simplifies how developers interact with Flow by combining the functionality of the Flow CLI, Playground, and block explorer into a single, intuitive desktop app. It's built to make blockchain development on Flow faster, clearer, and more visual.</p>
                 
                 <div class="flowser-buttons">
