Change LinkLock subtitle to bold paragraph
- Changed h3 to bold paragraph with 'subtitle' class in LinkLock section
- Added CSS styling matching other subtitle styles (1.2rem, #666, 0.25rem bottom margin)

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="linklock-content">
                 <div class="linklock-content-wrapper">
                     <h2>LinkLock</h2>
-                    <h3>Community membership management protocol</h3>
+                    <p class="subtitle"><strong>Community membership management protocol</strong></p>
                     <p>An on-chain protocol for managing community memberships. LinkLock lets creators and developers manage, verify, and gate content access directly through smart contracts — no middlemen.</p>
                     
                     <div id="linklock-extra-content" class="linklock-hidden-content">
