Change Cadence and Interact subtitles to bold paragraphs
- Changed h3 to bold paragraph with 'subtitle' class in both Cadence Formatter and Flowser Interact sections
- Added CSS styling matching other subtitle styles (1.2rem, #666, 0.25rem bottom margin)

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
                 <div class="cadence-content">
                     <h2>Cadence Formatter</h2>
-                    <h3>A tool that standardizes and beautifies Cadence code for a smoother workflow.</h3>
+                    <p class="subtitle"><strong>A tool that standardizes and beautifies Cadence code for a smoother workflow.</strong></p>
                     <p>Built to ensure consistent and readable smart contracts, the formatter improves code quality, streamlines collaboration, and integrates seamlessly across the Flow ecosystem.</p>
                     
                     <div class="cadence-buttons">
@@ -287,7 +287,7 @@
                 </div>
                 <div class="interact-content">
                     <h2>Flowser Interact</h2>
-                    <h3>A web-based explorer for verified Flow transaction templates.</h3>
+                    <p class="subtitle"><strong>A web-based explorer for verified Flow transaction templates.</strong></p>
                     <p>It lets developers discover, test, and customize transactions in the browser, streamlining experimentation and promoting consistent, trusted transaction patterns across the Flow ecosystem.</p>
                     
                     <div class="interact-buttons">
