Simplify Flowser Interact subtitle
- Changed to more concise text: 'A web tool for discovering, testing, and reusing verified Flow transactions easily.'

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </div>
                 <div class="interact-content">
                     <h2>Flowser Interact</h2>
-                    <p class="subtitle"><strong>A web-based explorer for verified Flow transaction templates that makes discovering and testing trusted on-chain transactions fast and intuitive.</strong></p>
+                    <p class="subtitle"><strong>A web tool for discovering, testing, and reusing verified Flow transactions easily.</strong></p>
                     <p>It lets developers discover, test, and customize transactions in the browser, streamlining experimentation and promoting consistent, trusted transaction patterns across the Flow ecosystem.</p>
                     
                     <div class="interact-buttons">
