Update 'Get in touch' link to Cal.com booking page
- Changed from mailto link to https://cal.com/0xbartek/onion-labs-intro
- Added target='_blank' and rel='noopener noreferrer' for external link

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <h2>Let's build the future of Web3 — together.</h2>
             <p>Have a project, partnership idea, or collaboration in mind?</p>
             <p>Reach out and let's explore what we can create.</p>
-            <a href="mailto:contact@synverge.dev" class="contact-btn">Get in touch</a>
+            <a href="https://cal.com/0xbartek/onion-labs-intro" target="_blank" rel="noopener noreferrer" class="contact-btn">Get in touch</a>
         </div>
     </section>
     
