--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
             <div class="logo">
                 <img src="logo.png.png" alt="Synverge">
             </div>
+            <a href="https://cal.com/0xbartek/onion-labs-intro" target="_blank" rel="noopener noreferrer" class="nav-cta">
+                <span class="nav-cta-text">Book a meeting</span>
+                <svg class="nav-cta-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                </svg>
+            </a>
         </div>
     </nav>
     
